# flask_base

./: .flake8  Dockerfile  Makefile  pyproject.toml  setup.cfg
.docker/: Dockerfile.dev  docker-compose.dev.yml
.github/workflows/: ci-workflow.yml
base_app/swagger/: template.py
