[tool.black]
line-length=100
target-version=['py39']
skip-string-normalization=true
exclude='''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | env | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.poetry]
name = "flask_base"
version = "0.1.0"
description = "Flask base repository for another projects"
authors = ["Juan Pablo Cano <jp.cano@uniandes.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
