[tool.black]
line-length=100
target-version=['py39']
skip-string-normalization=true
exclude='''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | env | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.poetry]
name = "flask_base"
version = "0.1.0"
description = "Flask base repository for another projects"
authors = ["Juan Pablo Cano <jp.cano@uniandes.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.2"
Flask-Cors = "3.0.10"
click = "8.0.3"
flasgger = "0.9.5"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
python-dotenv = "0.19.2"
six = "1.16.0"
Werkzeug = "2.0.2"
gunicorn = "20.0.4"
sentry-sdk = {version = "1.5.0", extras = ["flask"]}

[tool.poetry.dev-dependencies]
bandit = "1.7.0"
flake8 = "3.9.2"
flake8-builtins = "1.5.3"
flake8-bugbear = "20.1.4"
flake8-commas = "2.0.0"
flake8-comprehensions = "3.2.3"
flake8-quotes = "3.2.0"
flake8-tidy-imports = "4.1.0"
icecream = "2.1.1"
isort = "4.3.20"
mypy = "0.782"
safety = "1.10.3"
vulture = "2.1"
coverage = "5.3"
factory-boy = "3.1.0"
freezegun = "1.0.0"
jsonschema = "3.2.0"
ipython = "7.3.0"
black = "21.10b0"
flake8-blind-except = "0.2.0"
flake8-debugger = "4.0.0"
flake8-docstrings = "1.6.0"
flake8-isort = "4.1.1"
flake8-polyfill = "1.0.2"
flake8-pytest = "1.3"
detect-secrets = "1.0.3"
parameterized = "0.8.1"
pre-commit = "2.15.0"
pytest = "6.1.1"
pytest-dotenv = "0.5.2"
pytest-mock = "3.3.1"
pytest-randomly = "3.4.1"
pytest-httpx = "0.10.0"
types-certifi = "0.1.3"
types-cryptography = "3.3.0"
types-enum34 = "0.1.5"
types-Flask = "1.1.5"
types-futures = "0.1.3"
types-ipaddress = "0.1.2"
types-Jinja2 = "2.11.0"
types-jwt = "0.1.3"
types-MarkupSafe = "1.1.0"
types-protobuf = "0.1.11"
types-python-dateutil = "0.1.2"
types-pytz = "0.1.0"
types-requests = "0.1.10"
types-six = "0.1.6"
yesqa = "1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
